--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-47259320-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-47259320-1');
+    </script>
     <meta property="og:title" content="Visualization of exponential sums" />
     <meta property="og:description" content="Exponential sums are plotted as sequence of partial sums" />
     <meta charset="utf-8">
@@ -29,14 +37,5 @@ canvas {position: absolute;}
   <body>
     <canvas id='scene-canvas'></canvas>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-47259320-1', 'anvaka.github.io');
-  ga('send', 'pageview');
-</script>
   </body>
 </html>
