migrated to vue3

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@ canvas {position: absolute;}
   <body>
     <canvas id='scene-canvas'></canvas>
     <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
